fix collapse button

--- a/docs/playlist.css
+++ b/docs/playlist.css
@@ -58,6 +58,7 @@
 .playlist-section {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap; /* Allows items to wrap */
   margin: 0;
   padding: 0;
   width: 100%;
@@ -205,10 +206,10 @@
   border-radius: 5px;
   color: white;
   cursor: pointer;
-  font-size: 1.2rem;
-  padding: 5px 10px;
+  font-size: .8rem;
+  padding: 3px 8px;
   position: absolute;
-  right: 10px;
+  right: 1px;
 }
 
 .album-cover {
@@ -244,4 +245,16 @@
 .sort-button[data-order="asc"] .fa-sort-up,
 .sort-button[data-order="desc"] .fa-sort-down {
   display: inline;
+}
+
+/* Media query to stack playlists vertically on smaller screens */
+@media screen and (max-width: 768px) {
+  .playlist-section {
+    flex-direction: column; /* Stack playlists vertically */
+    align-items: center; /* Center playlists horizontally */
+  }
+  
+  .playlist-column {
+    width: 100%; /* Ensure playlists take full width on smaller screens */
+  }
 }
